--- a/package.json
+++ b/package.json
@@ -4,17 +4,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "buildev": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^6.5.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.11.0",
+    "firebase-admin": "^11.1.0",
+    "fireorm": "^0.23.3",
+    "formidable": "^2.0.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-redux": "^8.0.4",
+    "reflect-metadata": "^0.1.13",
+    "ts-md5": "^1.3.1"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "^4.8.4"
   }
 }
