--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^11.1.0",
     "fireorm": "^0.23.3",
     "formidable": "^2.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
