--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/storage": "^6.5.2",
     "@reduxjs/toolkit": "^1.8.5",
     "dotenv": "^16.0.3",
+    "extract-urls": "^1.3.2",
     "firebase": "^9.11.0",
     "firebase-admin": "^11.1.0",
     "fireorm": "^0.23.3",
